--- a/.github/workflows/cis-compliance-check.yml
+++ b/.github/workflows/cis-compliance-check.yml
@@ -74,11 +74,11 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ env.AWS_DEFAULT_REGION }}
+        #   role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+        #   aws-region: ${{ env.AWS_DEFAULT_REGION }}
           # Alternative: use access keys if OIDC not set up
-          # aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          # aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       
       - name: Verify AWS connection
         run: |
