--- a/.github/workflows/cis-compliance-check.yml
+++ b/.github/workflows/cis-compliance-check.yml
@@ -79,6 +79,7 @@ jobs:
           # Alternative: use access keys if OIDC not set up
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_DEFAULT_REGION }}
       
       - name: Verify AWS connection
         run: |
@@ -262,7 +263,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          # Use same access keys method as AWS job
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_DEFAULT_REGION }}
       
       - name: Install kubectl
