--- a/.github/workflows/cis-compliance-check.yml
+++ b/.github/workflows/cis-compliance-check.yml
@@ -352,19 +352,19 @@ jobs:
             cis-benchmark-checker/k8s_cis_report.html
           retention-days: 30
 
-  notify:
-    name: Send Notifications
-    runs-on: ubuntu-latest
-    needs: [aws-cis-compliance, kubernetes-cis-compliance]
-    if: always() && (github.event.inputs.notification_slack == 'true' || github.event_name == 'schedule')
+#   notify:
+#     name: Send Notifications
+#     runs-on: ubuntu-latest
+#     needs: [aws-cis-compliance, kubernetes-cis-compliance]
+#     if: always() && (github.event.inputs.notification_slack == 'true' || github.event_name == 'schedule')
     
-    steps:
-      - name: Send Slack notification
-        if: always()
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields: repo,message,commit,author,action,eventName,ref,workflow
-          webhook_url: ${{ secrets.SLACK_WEBHOOK }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+    # steps:
+    #   - name: Send Slack notification
+    #     if: always()
+    #     uses: 8398a7/action-slack@v3
+    #     with:
+    #       status: ${{ job.status }}
+    #       fields: repo,message,commit,author,action,eventName,ref,workflow
+    #       webhook_url: ${{ secrets.SLACK_WEBHOOK }}
+    #     env:
+    #       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
