Fix extended CIS script arguments
- Removed invalid --environment argument from extended_cis.py call
- Script expects --profile or no additional args, not --environment
- Now uses same pattern as main cis_checker.py with --region before check subcommand

--- a/.github/workflows/deploy-test-infrastructure.yml
+++ b/.github/workflows/deploy-test-infrastructure.yml
@@ -207,7 +207,7 @@ jobs:
           # Run extended checks if available
           if [ -f "extended_cis.py" ]; then
             echo "### Extended CIS Compliance Check"
-            python3 extended_cis.py --region $AWS_DEFAULT_REGION --environment ${{ github.event.inputs.environment }} --output ../test_results_extended.json
+            python3 extended_cis.py --region $AWS_DEFAULT_REGION check --format json --output ../test_results_extended.json
           fi
           
           # Run unified checks if available
