Add comprehensive debugging for Terraform Apply issue
🐛 Issue: Terraform Apply still not running despite plan success
📊 Debug Info: Plan file uploaded (19797 bytes) but apply step skipped

✅ Enhanced Debugging:
- Add detailed plan step logging with file size verification
- Show exact exit code value and type in debug step
- Add conditional debugging when apply is skipped
- Log step outcomes and conclusions for troubleshooting
- Verify plan file creation with file size details

🔍 This will help identify:
- Exact exit code value and format
- Whether plan file is properly created
- Why condition checks are failing
- Any whitespace or formatting issues in exit code

--- a/.github/workflows/deploy-test-infrastructure.yml
+++ b/.github/workflows/deploy-test-infrastructure.yml
@@ -103,6 +103,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: |
+          echo "::notice::Starting terraform plan..."
           terraform plan -out=tfplan -detailed-exitcode
           PLAN_EXIT_CODE=$?
           echo "plan_exitcode=$PLAN_EXIT_CODE" >> $GITHUB_OUTPUT
@@ -115,7 +116,20 @@ jobs:
             2) echo "::notice::Changes detected - ready to apply" ;;
             *) echo "::warning::Unexpected exit code: $PLAN_EXIT_CODE" ;;
           esac
+          
+          # Debug: Show plan output exists
+          if [ -f tfplan ]; then
+            echo "::notice::Plan file created successfully ($(ls -la tfplan | awk '{print $5}') bytes)"
+          else
+            echo "::error::Plan file was not created!"
+          fi
         continue-on-error: true
+      
+      - name: Debug Plan Exit Code
+        run: |
+          echo "::notice::Debug - Plan exit code from output: '${{ steps.plan.outputs.plan_exitcode }}'"
+          echo "::notice::Debug - Plan step outcome: '${{ steps.plan.outcome }}'"
+          echo "::notice::Debug - Plan step conclusion: '${{ steps.plan.conclusion }}'"
       
       - name: Upload Terraform Plan
         uses: actions/upload-artifact@v4
@@ -128,15 +142,23 @@ jobs:
         if: steps.plan.outputs.plan_exitcode == '2'
         id: apply
         run: |
+          echo "::notice::Condition met - Plan exit code is '${{ steps.plan.outputs.plan_exitcode }}'"
           echo "::notice::Starting terraform apply with plan exit code: ${{ steps.plan.outputs.plan_exitcode }}"
           terraform apply -auto-approve tfplan
           echo "::notice::Infrastructure deployed successfully"
       
+      - name: Debug Apply Conditions
+        if: steps.plan.outputs.plan_exitcode != '2'
+        run: |
+          echo "::warning::Apply step skipped - Plan exit code was '${{ steps.plan.outputs.plan_exitcode }}' (not '2')"
+          echo "::notice::Plan exit code type: $(echo '${{ steps.plan.outputs.plan_exitcode }}' | wc -c) characters"
+          echo "::notice::Expected: '2' (1 character + newline)"
+          
       - name: Terraform Apply (Force if plan failed)
         if: steps.plan.outputs.plan_exitcode != '2' && steps.plan.outputs.plan_exitcode != '0'
         id: apply_force
         run: |
-          echo "::warning::Plan exit code was ${{ steps.plan.outputs.plan_exitcode }}, attempting direct apply"
+          echo "::warning::Plan exit code was '${{ steps.plan.outputs.plan_exitcode }}', attempting direct apply"
           echo "::notice::Running terraform apply without saved plan"
           terraform apply -auto-approve
           echo "::notice::Infrastructure deployed successfully (forced apply)"
