Add emergency resource cleanup tools
Option 1: Enhanced GitHub Actions destroy with aggressive cleanup
- Improved terraform destroy with force delete for EKS clusters
- Manual AWS CLI commands for stuck resources
- Better error handling and retry logic

Option 2: Emergency Cleanup GitHub Actions workflow
- On-demand cleanup workflow for stuck resources
- Deletes EKS clusters, load balancers, security groups, VPCs
- Pattern-based resource matching by environment/run number
- Force delete option for IAM roles

Option 3: Local emergency cleanup script
- Comprehensive bash script for manual cleanup
- Step-by-step resource deletion with proper ordering
- Wait logic and retry mechanisms
- Usage: ./emergency-cleanup.sh <env> [run_number]

All three options handle the most common stuck resources:
- EKS clusters and node groups
- Load balancers (ALB/NLB/Classic)
- Security groups with dependencies
- VPCs with all associated resources
- EC2 instances and NAT gateways

--- a/.github/workflows/deploy-test-infrastructure.yml
+++ b/.github/workflows/deploy-test-infrastructure.yml
@@ -400,8 +400,34 @@ jobs:
       - name: Terraform Destroy
         run: |
           echo "Destroying infrastructure..."
-          terraform destroy -auto-approve
-          echo "::notice::Infrastructure destroyed successfully"
+          
+          # Try normal destroy first
+          if ! terraform destroy -auto-approve -lock=false; then
+            echo "::warning::Normal destroy failed, trying aggressive cleanup..."
+            
+            # Force delete EKS cluster first (common blocker)
+            CLUSTER_NAME="cis-${{ github.event.inputs.environment }}-${{ github.run_number }}-eks-cluster"
+            echo "Attempting to delete EKS cluster: $CLUSTER_NAME"
+            aws eks delete-cluster --name "$CLUSTER_NAME" --region $AWS_DEFAULT_REGION || true
+            
+            # Wait for cluster deletion
+            echo "Waiting for EKS cluster deletion..."
+            aws eks wait cluster-deleted --name "$CLUSTER_NAME" --region $AWS_DEFAULT_REGION || true
+            
+            # Force delete node groups
+            for nodegroup in $(aws eks list-nodegroups --cluster-name "$CLUSTER_NAME" --region $AWS_DEFAULT_REGION --query 'nodegroups[]' --output text 2>/dev/null || echo ""); do
+              if [ ! -z "$nodegroup" ]; then
+                echo "Deleting nodegroup: $nodegroup"
+                aws eks delete-nodegroup --cluster-name "$CLUSTER_NAME" --nodegroup-name "$nodegroup" --region $AWS_DEFAULT_REGION || true
+              fi
+            done
+            
+            # Try destroy again after manual cleanup
+            sleep 60
+            terraform destroy -auto-approve -lock=false || echo "::error::Destroy still failed - manual cleanup required"
+          fi
+          
+          echo "::notice::Infrastructure destroy completed"
       
       - name: Cleanup Artifacts
         if: success()
