🔧 Fix critical bugs in emergency cleanup scripts
- Fix subnet ID parsing issue by converting tabs to newlines
- Add proper VPC dependency cleanup order (EIPs, NAT gateways, ENIs first)
- Implement retry logic for VPC deletion (up to 10 attempts)
- Add comprehensive error handling and progress indicators
- Ensure Security Groups are deleted before VPC deletion
- Add wait times for asynchronous resource deletions
- Apply fixes to both local script and GitHub Actions workflow

Resolves AWS CLI errors encountered during manual cleanup execution.

--- a/.github/workflows/emergency-cleanup.yml
+++ b/.github/workflows/emergency-cleanup.yml
@@ -132,28 +132,104 @@ jobs:
           for vpc_id in $VPC_IDS; do
             echo "🗑️ Cleaning up VPC: $vpc_id"
             
-            # Delete subnets
-            aws ec2 describe-subnets --region $AWS_DEFAULT_REGION --filters "Name=vpc-id,Values=$vpc_id" --query 'Subnets[].SubnetId' --output text | while read subnet_id; do
-              echo "  Deleting subnet: $subnet_id"
-              aws ec2 delete-subnet --subnet-id "$subnet_id" --region $AWS_DEFAULT_REGION || true
+            # Release Elastic IPs first
+            echo "  Releasing Elastic IPs..."
+            aws ec2 describe-addresses --region $AWS_DEFAULT_REGION --filters "Name=domain,Values=vpc" --query "Addresses[?AssociationId].AllocationId" --output text | while read alloc_id; do
+              if [ ! -z "$alloc_id" ]; then
+                echo "  Releasing EIP: $alloc_id"
+                aws ec2 release-address --allocation-id "$alloc_id" --region $AWS_DEFAULT_REGION || true
+              fi
             done
             
-            # Delete internet gateway
+            # Delete NAT Gateways first
+            echo "  Deleting NAT Gateways..."
+            aws ec2 describe-nat-gateways --region $AWS_DEFAULT_REGION --filter "Name=vpc-id,Values=$vpc_id" --query 'NatGateways[?State==`available`].NatGatewayId' --output text | while read nat_id; do
+              if [ ! -z "$nat_id" ]; then
+                echo "  Deleting NAT Gateway: $nat_id"
+                aws ec2 delete-nat-gateway --nat-gateway-id "$nat_id" --region $AWS_DEFAULT_REGION || true
+              fi
+            done
+            
+            # Wait for NAT Gateways
+            echo "  Waiting for NAT Gateways to delete..."
+            sleep 60
+            
+            # Delete Load Balancers in this VPC
+            echo "  Deleting Load Balancers in VPC..."
+            aws elbv2 describe-load-balancers --region $AWS_DEFAULT_REGION --query "LoadBalancers[?VpcId=='$vpc_id'].LoadBalancerArn" --output text | while read lb_arn; do
+              if [ ! -z "$lb_arn" ]; then
+                echo "  Deleting Load Balancer: $lb_arn"
+                aws elbv2 delete-load-balancer --load-balancer-arn "$lb_arn" --region $AWS_DEFAULT_REGION || true
+              fi
+            done
+            
+            # Delete Network Interfaces
+            echo "  Deleting Network Interfaces..."
+            aws ec2 describe-network-interfaces --region $AWS_DEFAULT_REGION --filters "Name=vpc-id,Values=$vpc_id" --query 'NetworkInterfaces[?Status==`available`].NetworkInterfaceId' --output text | while read eni_id; do
+              if [ ! -z "$eni_id" ]; then
+                echo "  Deleting ENI: $eni_id"
+                aws ec2 delete-network-interface --network-interface-id "$eni_id" --region $AWS_DEFAULT_REGION || true
+              fi
+            done
+            
+            # Delete subnets (fix the parsing issue)
+            echo "  Deleting subnets..."
+            aws ec2 describe-subnets --region $AWS_DEFAULT_REGION --filters "Name=vpc-id,Values=$vpc_id" --query 'Subnets[].SubnetId' --output text | tr '\t' '\n' | while read subnet_id; do
+              if [ ! -z "$subnet_id" ]; then
+                echo "  Deleting subnet: $subnet_id"
+                aws ec2 delete-subnet --subnet-id "$subnet_id" --region $AWS_DEFAULT_REGION || true
+              fi
+            done
+            
+            # Delete internet gateway (after releasing EIPs)
+            echo "  Detaching and deleting Internet Gateway..."
             aws ec2 describe-internet-gateways --region $AWS_DEFAULT_REGION --filters "Name=attachment.vpc-id,Values=$vpc_id" --query 'InternetGateways[].InternetGatewayId' --output text | while read igw_id; do
-              echo "  Detaching and deleting IGW: $igw_id"
-              aws ec2 detach-internet-gateway --internet-gateway-id "$igw_id" --vpc-id "$vpc_id" --region $AWS_DEFAULT_REGION || true
-              aws ec2 delete-internet-gateway --internet-gateway-id "$igw_id" --region $AWS_DEFAULT_REGION || true
+              if [ ! -z "$igw_id" ]; then
+                echo "  Detaching IGW: $igw_id"
+                aws ec2 detach-internet-gateway --internet-gateway-id "$igw_id" --vpc-id "$vpc_id" --region $AWS_DEFAULT_REGION || true
+                sleep 10
+                echo "  Deleting IGW: $igw_id"
+                aws ec2 delete-internet-gateway --internet-gateway-id "$igw_id" --region $AWS_DEFAULT_REGION || true
+              fi
             done
             
             # Delete route tables (except main)
+            echo "  Deleting route tables..."
             aws ec2 describe-route-tables --region $AWS_DEFAULT_REGION --filters "Name=vpc-id,Values=$vpc_id" --query 'RouteTables[?Associations[0].Main != `true`].RouteTableId' --output text | while read rt_id; do
-              echo "  Deleting route table: $rt_id"
-              aws ec2 delete-route-table --route-table-id "$rt_id" --region $AWS_DEFAULT_REGION || true
+              if [ ! -z "$rt_id" ]; then
+                echo "  Deleting route table: $rt_id"
+                aws ec2 delete-route-table --route-table-id "$rt_id" --region $AWS_DEFAULT_REGION || true
+              fi
             done
             
-            # Delete VPC
+            # Delete Security Groups in this VPC (before VPC deletion)
+            echo "  Deleting Security Groups in VPC..."
+            aws ec2 describe-security-groups --region $AWS_DEFAULT_REGION --filters "Name=vpc-id,Values=$vpc_id" --query "SecurityGroups[?GroupName != 'default'].GroupId" --output text | while read sg_id; do
+              if [ ! -z "$sg_id" ]; then
+                echo "  Deleting Security Group: $sg_id"
+                for i in {1..5}; do
+                  if aws ec2 delete-security-group --group-id "$sg_id" --region $AWS_DEFAULT_REGION 2>/dev/null; then
+                    echo "    ✅ Deleted SG: $sg_id"
+                    break
+                  else
+                    echo "    ⏳ Retry $i/5 for SG: $sg_id"
+                    sleep 15
+                  fi
+                done
+              fi
+            done
+            
+            # Delete VPC (with more retries)
             echo "  Deleting VPC: $vpc_id"
-            aws ec2 delete-vpc --vpc-id "$vpc_id" --region $AWS_DEFAULT_REGION || true
+            for i in {1..10}; do
+              if aws ec2 delete-vpc --vpc-id "$vpc_id" --region $AWS_DEFAULT_REGION 2>/dev/null; then
+                echo "  ✅ Deleted VPC: $vpc_id"
+                break
+              else
+                echo "  ⏳ Retry $i/10 for VPC: $vpc_id (waiting for dependencies...)"
+                sleep 30
+              fi
+            done
           done
       
       - name: Delete IAM Roles
