--- a/.github/workflows/deploy-test-infrastructure.yml
+++ b/.github/workflows/deploy-test-infrastructure.yml
@@ -68,7 +68,7 @@ jobs:
         run: |
           cat > terraform.tfvars << EOF
           environment = "${{ github.event.inputs.environment }}"
-          project_name = "cis-${{ github.event.inputs.environment }}-${{ github.run_number }}"
+          prefix = "cis-${{ github.event.inputs.environment }}-${{ github.run_number }}"
           create_non_compliant_resources = ${{ github.event.inputs.create_non_compliant }}
           enable_flow_logs = true
           enable_config = true
@@ -91,7 +91,7 @@ jobs:
       - name: Terraform Init
         id: init
         run: |
-          terraform init -upgrade
+          terraform init
           echo "::notice::Terraform initialized successfully"
       
       - name: Terraform Validate
@@ -103,8 +103,9 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: |
+          echo "::notice::Running terraform plan..."
           terraform plan -out=tfplan
-          echo "::notice::Terraform plan completed"
+          echo "::notice::Terraform plan completed successfully"
       
       - name: Upload Terraform Plan
         uses: actions/upload-artifact@v4
@@ -116,34 +117,10 @@ jobs:
       - name: Terraform Apply
         id: apply
         run: |
-          echo "Starting Terraform apply..."
-          
-          # Retry logic for common AWS issues
-          for i in {1..3}; do
-            echo "Attempt $i of 3..."
-            if terraform apply -auto-approve tfplan 2>&1 | tee apply.log; then
-              echo "::notice::Infrastructure deployed successfully"
-              break
-            else
-              if [ $i -eq 3 ]; then
-                echo "::error::Terraform apply failed after 3 attempts"
-                echo "Apply log:"
-                cat apply.log
-                exit 1
-              fi
-              echo "::warning::Attempt $i failed, retrying in 30 seconds..."
-              sleep 30
-            fi
-          done
+          echo "::notice::Running terraform apply..."
+          terraform apply -auto-approve tfplan
+          echo "::notice::Infrastructure deployed successfully"
       
-      - name: Upload Apply Logs on Failure
-        if: failure() && steps.apply.outcome == 'failure'
-        uses: actions/upload-artifact@v4
-        with:
-          name: terraform-apply-logs-${{ github.run_number }}
-          path: cis-benchmark-checker/tf/apply.log
-          retention-days: 7
-
       - name: Save Terraform Outputs
         if: success()
         run: |
@@ -225,30 +202,6 @@ jobs:
           echo "Waiting 2 minutes for infrastructure to stabilize..."
           sleep 120
       
-      - name: Deploy Kubernetes Test Manifests
-        if: success()
-        run: |
-          cd cis-benchmark-checker/tf
-          
-          # Configure kubectl
-          CLUSTER_NAME="cis-${{ github.event.inputs.environment }}-${{ github.run_number }}-eks-cluster"
-          aws eks update-kubeconfig --region $AWS_DEFAULT_REGION --name $CLUSTER_NAME || echo "EKS cluster not found or not ready"
-          
-          # Deploy test manifests if cluster is available
-          if kubectl cluster-info &>/dev/null; then
-            echo "### Deploying Kubernetes Test Workloads"
-            chmod +x k8s-deploy.sh
-            ./k8s-deploy.sh deploy
-            
-            # Wait for workloads to be ready
-            echo "Waiting for test workloads to be ready..."
-            kubectl wait --for=condition=Ready pod --all --timeout=300s || echo "Some pods may not be ready"
-            
-            echo "### Test workloads deployed successfully"
-          else
-            echo "Kubernetes cluster not available for manifest deployment"
-          fi
-      
       - name: Run Full CIS Compliance Test Suite
         run: |
           cd cis-benchmark-checker/scripts
@@ -285,7 +238,7 @@ jobs:
           # Run K8s tests if cluster is available
           if kubectl cluster-info &>/dev/null; then
             echo "### Kubernetes CIS Compliance Check"
-            python3 k8s_cis_checker.py check --format json --output ../test_results_k8s.json
+            python3 k8s_cis_checker.py --output json > ../test_results_k8s.json
           else
             echo "Kubernetes cluster not available for testing"
           fi
@@ -400,34 +353,8 @@ jobs:
       - name: Terraform Destroy
         run: |
           echo "Destroying infrastructure..."
-          
-          # Try normal destroy first
-          if ! terraform destroy -auto-approve -lock=false; then
-            echo "::warning::Normal destroy failed, trying aggressive cleanup..."
-            
-            # Force delete EKS cluster first (common blocker)
-            CLUSTER_NAME="cis-${{ github.event.inputs.environment }}-${{ github.run_number }}-eks-cluster"
-            echo "Attempting to delete EKS cluster: $CLUSTER_NAME"
-            aws eks delete-cluster --name "$CLUSTER_NAME" --region $AWS_DEFAULT_REGION || true
-            
-            # Wait for cluster deletion
-            echo "Waiting for EKS cluster deletion..."
-            aws eks wait cluster-deleted --name "$CLUSTER_NAME" --region $AWS_DEFAULT_REGION || true
-            
-            # Force delete node groups
-            for nodegroup in $(aws eks list-nodegroups --cluster-name "$CLUSTER_NAME" --region $AWS_DEFAULT_REGION --query 'nodegroups[]' --output text 2>/dev/null || echo ""); do
-              if [ ! -z "$nodegroup" ]; then
-                echo "Deleting nodegroup: $nodegroup"
-                aws eks delete-nodegroup --cluster-name "$CLUSTER_NAME" --nodegroup-name "$nodegroup" --region $AWS_DEFAULT_REGION || true
-              fi
-            done
-            
-            # Try destroy again after manual cleanup
-            sleep 60
-            terraform destroy -auto-approve -lock=false || echo "::error::Destroy still failed - manual cleanup required"
-          fi
-          
-          echo "::notice::Infrastructure destroy completed"
+          terraform destroy -auto-approve
+          echo "::notice::Infrastructure destroyed successfully"
       
       - name: Cleanup Artifacts
         if: success()
